# droncast

./: .env  .env.example  .flake8  .gitignore  Dockerfile  Makefile  Open Meteo API.postman_collection.json  Pipfile  README.md  compose.yaml  docker-compose.yaml  gunicorn.conf.py  pyproject.toml
requirements/: dev.txt  main.txt
src/: config.py  main.py
src/config/: celery.py  constants.py  settings.py
src/core/: admin.py  constants.py  coordinates_utils.py  models.py  tasks.py  weather_service.py
src/core/migrations/: 0001_initial.py
src/http/: __init__.py  resources.py
src/infrastructure/: __init__.py  dal.py  data_structures.py  http.py
