# ************************************************
# ********** Project Metadata **********
# ************************************************
[project]
name = "droncast"
version = "0.1.0"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [ { name = "Dmytro Parfeniuk" } ]
requires-python = ">=3.12.0,<4.0"
dependencies = [
    "fastapi>=0.115.8",             # web framework
    "gunicorn>=23.0",               # application web server
    "requests>=2.32.3",             # http client
    "loguru>=0.7.2",                # better logging experience
    "pydantic-settings>=2.0.0",     # better settings experience
    "pydantic>=2.0.0",              # data validation
    "uvicorn[standard]>=0.23.2",    # async application web server
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",                # formatting
    "flake8>=7.1.1",                # linter
    "isort>=6.0.0",                 # another formatting (imports sort)
    "mypy>=1.15.0",                 # type checking
    "pytest>=8.3.4",                # testing framework
]


# ************************************************
# ********** Code Quality Tools **********
# ************************************************

[tool.black]
target-version = ['py312']
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
  )/
)
'''


[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
skip = 'venv'
src_paths = ["src", "tests"]


[tool.mypy]
plugins = [
    "pydantic.mypy",
]
files = ["src", "tests"]
python_version = '3.12'
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
namespace_packages = true
exclude = ["venv"]

# Silence "type import errors" as our 3rd-party libs does not have types
# Check: https://mypy.readthedocs.io/en/latest/config_file.html#import-discovery
follow_imports = 'silent'

# [[tool.mypy.overrides]]
# ignore_missing_imports=true


[tool.pytest.ini_options]
addopts = '-s -vvv -x'
cache_dir = '/tmp'
asyncio_mode = 'auto'
python_files = 'test_*.py'
python_functions = 'test_*'
filterwarnings = [
    'ignore::RuntimeWarning',
    'ignore::UserWarning',
    "ignore::DeprecationWarning",
]


# ************************************************
# ********** Dependencies management **********
# ************************************************

[tool.pip-tools]
generate_hashes = true

